[gd_scene load_steps=5 format=3 uid="uid://56tsgnpvqnvp"]

[ext_resource type="Script" path="res://src/Weapons/Sword/sword.gd" id="1_poji0"]
[ext_resource type="Script" path="res://src/Utility_scripts/HitBox/hit_box.gd" id="3_rbjh0"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v0kw8"]
animations = [{
"frames": [],
"loop": true,
"name": &"attack",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a5wes"]
size = Vector2(20.6515, 57.4909)

[node name="Sword" type="Node2D"]
position = Vector2(12, 13)
script = ExtResource("1_poji0")

[node name="Sword_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-11, -13)
scale = Vector2(1.05319, 0.887096)
sprite_frames = SubResource("SpriteFrames_v0kw8")
animation = &"attack"
speed_scale = 2.0

[node name="HitBox" type="Area2D" parent="Sword_sprite" groups=["attack"]]
collision_layer = 8
collision_mask = 64
script = ExtResource("3_rbjh0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword_sprite/HitBox"]
light_mask = 2
position = Vector2(-25.6364, -8.58307e-06)
shape = SubResource("RectangleShape2D_a5wes")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="area_entered" from="Sword_sprite/HitBox" to="." method="__enemy_entered_attack_range"]
[connection signal="area_exited" from="Sword_sprite/HitBox" to="." method="__enemy_exited_attack_range"]
